--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section>
             <form>
-                <textarea name="" id="boxtext" cols="35" rows="8" placeholder="Ingrese tu texto aqui"></textarea>
+                <textarea name="" id="boxtext" cols="45" rows="8" placeholder="Ingrese tu texto aqui"></textarea>
                 <p><img src="./img/exclamación.png" alt=""><span>Solo letras minúsculas y sin acentos</span></p>
                 <div class="group-btn">
                     <button id="encriptar">Encriptar</button>
@@ -25,20 +25,21 @@
             </form>
         </section>
         <aside>
+            <textarea name="textcopiar" id="textcopiar" cols="28" rows="22"></textarea>
             <img src="./img/Muñeco.png" alt="imagen1" id="imagenMuneco">
             <div class="mensaje" id="mensaje">
                 <p>Ningún mensaje fue encontrado</p>
                 <p>Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
-            <button id="copiar">Copiar</button>
+            <button id="copiar" class="copiar">Copiar</button>
         </aside>
     </main>
     <footer>
         <div class="pie">
             <p>Desarrollado por Renzo Medina</p>
             <div class="redes">
-                <a href="">Linkeind</a>
-                <a href="">GitHub</a>
+                <a href="#">Linkeind</a>
+                <a href="#">GitHub</a>
             </div>
         </div>
     </footer>
