Hemos agregado las funcion de encriptar con el boton además se ha creado la logica del boton copiar para que podamos aplicar y seleccione el texto donde se descrencriptará

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </form>
         </section>
         <aside>
-            <textarea name="textcopiar" id="textcopiar" cols="28" rows="22"></textarea>
+            <textarea class="ocultar" name="textcopiar" id="textcopiar" cols="28" rows="22"></textarea>
             <img src="./img/Muñeco.png" alt="imagen1" id="imagenMuneco">
             <div class="mensaje" id="mensaje">
                 <p>Ningún mensaje fue encontrado</p>
                 <p>Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
-            <button id="copiar" class="copiar">Copiar</button>
+            <button id="copiar" class="copiar ocultar">Copiar</button>
         </aside>
     </main>
     <footer>
