Se hicieron ajuste finales y se agregaron 2 botones

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="pie">
             <p>Desarrollado por Renzo Medina</p>
             <div class="redes">
-                <a href="#">Linkeind</a>
-                <a href="#">GitHub</a>
+                <a href="https://www.linkedin.com/in/renzo-steven-medina-olaya-5a3103209/" target="_blank"><img src="./img/linkedin.png" alt="linkedIn"></a>
+                <a href="https://github.com/RenzoMedina" target="_blank"><img src="./img/github.png" alt="git"></a>
             </div>
         </div>
     </footer>
